<resources>

    <string name="app_name">MyHorseShow</string>
    <string name="title_activity_main">@string/app_name</string>
    
    <!-- Misc. -->
    <string name="submit_caption">Submit</string>
    <string name="ok_caption">OK</string>
    
    <!-- Login -->
    <string name="sign_in_caption">Sign in</string>
    <string name="identifier_caption">Email: </string>
    <string name="password_caption">Password: </string>
    <string name="forgot_password_prompt">Forgot your password?</string>
    <string name="login_caption">Login</string>
    <string name="logging_in_caption">Logging in&#8230;</string>
    <string name="logging_in_description">This may take a few seconds&#8230;</string>
    <string name="invalid_login_caption">Invalid username or password.</string>
    
    <!-- CreateAccount -->
    <string name="new_user_prompt">Create Account</string>
    <string name="create_account_confirmpass">Confirm Password</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_first_name">First Name</string>
    <string name="create_account_last_name">Last Name</string>
    <string name="create_account_password">Password</string>
    <string name="creating_account_caption">Creating account&#8230;</string>
    <string name="creating_account_description">You should be logged into your new account shortly.</string>

    <!-- HomeActivity -->
    <string name="welcome_header">Welcome, %s!</string>
    <string name="upcoming_events_caption">Upcoming Events</string>
    <string name="alerts_caption">Alerts</string>
    <string name="admin_portal_caption">Administrator</string>
    <string name="instructor_portal_caption">Instructor</string>
    <string name="rider_portal_caption">Rider</string>
    
    <!-- Event -->
    <string name="event_class_list_caption">Class List</string>
    <string name="event_ride_times_caption">Ride Times</string>
    <string name="event_courses_caption">Courses</string>
    <string name="event_class_results_caption">Class Results</string>
    <string name="event_barn_info_caption">Barn Info</string>
    <string name="event_contact_info_caption">Contacts</string>
    <string name="event_create_event">+Create Event</string>
    <string name="event_stall_unoccupied">UNOCCUPIED</string>
    
    <!-- Classes -->
    <string name="class_course_image_description">This is the course riders will take.</string>
    
    <!-- Admin -->
    <string name="admin_rider_button">Riders"</string>
    <string name="admin_instructor_button">Instructors"</string>
    <string name="admin_divisions_button">Divisions"</string>
    <string name="admin_divisions_add_division_caption">Add Division</string>
    <string name="admin_divisions_add_class_caption">Add Class</string>
    <string name="admin_arenas_button">Arenas"</string>
    <string name="admin_final_results_button">Final Results"</string>
    <string name="admin_create_event_name_caption">Name: </string>
    <string name="admin_creating_event_caption">Creating event&#8230;</string>
    <string name="admin_creating_event_description">This should only take a moment.</string>
    <string name="admin_prompt_horse_name">Enter Horse Name</string>
    <string name="admin_prompt_division_name">Enter Division Name</string>
    <string name="admin_prompt_class_name">Enter Class Name</string>
    
</resources>