<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/portal_background_color"
    android:orientation="vertical" >
    
    <TextView
        style="@style/activity_header_text_view_style"
        android:textColor="@color/main_font_color"
        android:text="@string/admin_portal_caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/create_event_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_button_background_color"
            android:text="@string/event_create_event"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:id="@+id/editText1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Event Title"
            android:textSize="@dimen/button_text_size"
            android:background="@color/light_blue"
            android:textColor="@color/light_beige" >

        </TextView>

    </LinearLayout>

   	<RelativeLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content" >
   	    
   	    <ListView
   	        android:id="@+id/mylist"
   	        android:layout_width ="300dp"
   	        android:layout_height="wrap_content"
   	        android:background="@color/light_blue"
   	        android:divider="@color/lighter_blue"
   	        android:dividerHeight="1dp" >

	    </ListView>
		
   	    <LinearLayout
   	        android:id="@+id/admin_event_info"
   	        android:layout_width="250dp"
	        android:layout_height="match_parent"
	        android:layout_marginRight="1dp"
	        android:orientation="vertical"
	        android:visibility="visible"
	        android:layout_toRightOf="@+id/mylist">
	        
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/admin_rider_button"
	            android:text="@string/admin_rider_button" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/admin_instructor_button"
	            android:text="@string/admin_instructor_button" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/admin_divisions_button"
	            android:text="@string/admin_divisions_button" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/admin_arenas_button"
	            android:text="@string/admin_arenas_button" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/admin_final_results_button"
	            android:text="@string/admin_final_results_button" />
	        
	    </LinearLayout>

   	    <TextView
   	        android:id="@+id/listText"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_alignParentBottom="true"
   	        android:layout_alignParentRight="true"
   	        android:layout_alignParentTop="true"
   	        android:layout_toRightOf="@+id/admin_event_info"
   	        android:ems="10">
   	    </TextView>
   	    
   	</RelativeLayout>
    
</LinearLayout>