<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="72dp"
        android:textColor="@color/main_font_color"
        android:text="@string/sign_in_caption"/>
    
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#000000"
	                android:textSize="32dp"
	                android:text="@string/username_caption" />
	            
	            <EditText 
	                android:layout_marginLeft="30dp"
	                android:layout_width="300dp"
	                android:layout_height="32dp"
	                android:background="@color/edit_text_background_color"
	                android:textColor="@color/edit_text_font_color" />
	            
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#000000"
	                android:textSize="32dp"
	                android:text="@string/password_caption" />
	            
	            <EditText 
	                android:layout_marginLeft="30dp"
	                android:layout_width="300dp"
	                android:layout_height="32dp"
	                android:inputType="textPassword"
	                android:background="@color/edit_text_background_color"
	                android:textColor="@color/edit_text_font_color" />
	            
            </LinearLayout>
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/main_link_font_color"
                android:text="@string/forgot_password_prompt" />
            
            <Button
                android:id="@+id/main_screen_submit_button"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_button_background_color"
                android:textColor="@color/main_button_font_color"
                android:text="@string/submit_caption" />
                
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        
        <Button
            android:id="@+id/main_screen_create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="6dp"
            android:background="@color/main_button_background_color"
            android:textColor="@color/main_button_font_color"
            android:text="@string/new_user_prompt" />
        
    </RelativeLayout>

</LinearLayout>
