<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical" >
    
	<TextView
	    android:id="@+id/event_header_label"
	    style="@style/activity_header_text_view_style"
	    android:textColor="@color/main_font_color" />
	
	
	<!-- Main Buttons -->
	
	
	<LinearLayout
	    android:baselineAligned="false"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal">
	    
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:layout_marginRight="1dp"
	        android:orientation="vertical">
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/event_class_list_button"
	            android:text="@string/event_class_list_caption" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/event_ride_times_button"
	            android:text="@string/event_ride_times_caption" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/event_barn_info_button"
	            android:text="@string/event_barn_info_caption" />
	        
	        <Button
	            style="@style/event_button_style"
	            android:id="@+id/event_contact_info_button"
	            android:text="@string/event_contact_info_caption" />
	        
	    </LinearLayout>
	    
	    
	    <!-- Division/Class Info -->
	    
	    
	    <RelativeLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="3">
	        
	        <LinearLayout
	            style="@style/match_parent_style"
	            android:baselineAligned="false">
	            
	            <!-- Divisions -->
	            <RelativeLayout 
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:layout_marginRight="1dp">
	                
		            <ListView
		                android:visibility="invisible"
		                android:id="@+id/event_division_list_view"
		                style="@style/match_parent_style"
		                android:dividerHeight="1dp" />
	                
	            </RelativeLayout>
	            
	            <!-- Classes -->
	            <RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1">
		            
	                <ListView
	                    android:id="@+id/event_class_list_view"
	                    style="@style/match_parent_style"
	                    android:visibility="invisible"
	                    android:dividerHeight="1dp" />
	                
		        </RelativeLayout>
	            
	           	<RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1" />
	            
	        </LinearLayout>
	        
	        
	        <!-- Ride Times -->
	        
	        
	      	<LinearLayout
	            android:orientation="horizontal"
	            style="@style/match_parent_style">
	            
	            <RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1">
	                
	                <ListView
	                    android:id="@+id/event_ride_times_list_view"
	                    style="@style/match_parent_style"
	                    android:visibility="invisible"
	                    android:dividerHeight="1dp" />
	                    
	                
	            </RelativeLayout>
	            
	            <RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1" />
	            
	            <RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1" />
	            
	        </LinearLayout>
	        
	      	
	      	<!-- Barn Info -->
	      	
	      	
	        <LinearLayout
	            style="@style/match_parent_style"
	            android:baselineAligned="false">
	            
	            <!-- Barns -->
	            <RelativeLayout 
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:layout_marginRight="1dp">
	                
		            <ListView
		                android:visibility="invisible"
		                android:id="@+id/event_barn_list_view"
		                style="@style/match_parent_style"
		                android:dividerHeight="1dp" />
	                
	            </RelativeLayout>
	            
	            <!-- Stalls -->
	            <RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1">
		            
	                <ListView
	                    android:visibility="invisible"
	                    android:id="@+id/event_stall_list_view"
	                    style="@style/match_parent_style"
	                    android:dividerHeight="1dp" />
	                
		        </RelativeLayout>
	            	           	
	            <RelativeLayout
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="1">
	                
	                <TextView
	                    android:visibility="invisible"
	                    android:id="@+id/event_stall_occupant_text_view"
	                    style="@style/activity_subheader_text_view_style" />
	                
	            </RelativeLayout>
	            
	        </LinearLayout>
	        
	        
	        <!-- Contact Info -->
	        
	        
	        <LinearLayout
	            style="@style/match_parent_style"
	            android:baselineAligned="false">
	                
                <GridView
                    android:id="@+id/event_contacts_grid_view"
                    style="@style/match_parent_style"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:visibility="invisible"
                    android:dividerHeight="1dp" />
	            
	        </LinearLayout>
	        
	    </RelativeLayout>
	    
	</LinearLayout>
    
</LinearLayout>